k.erushnikov/argocd/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
spec:
  ingressClassName: traefik
  tls:
  - hosts:
      - argocd.k.erushnikov.ru
    secretName: wildcard-k-erushnikov-ru
  rules:
  - host: argocd.k.erushnikov.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
